feat: 完善长期记忆生命周期与矛盾检测